Changes file for {{$dist->name}}

{{$NEXT}}

1.31      2015-04-05 21:42:56-07:00 America/Los_Angeles (TRIAL RELEASE)

  * Tweak some test code to maybe not blow up on Windows (John
    Anderson)
  * Set a minimum version of MooX::HandlesVia to avoid test failures
    (John Anderson)

1.30      2015-03-27 21:25:15-07:00 America/Los_Angeles

  * Make 'got fork' add the forked repo as remote 'upstream' unless
    -N/--noremoteadd option is given. (John Anderson)
  * See also changes for dev releases v1.25 through v1.29

1.29      2015-03-26 11:58:24-07:00 America/Los_Angeles (TRIAL RELEASE)

  * Docs for 'clone' and 'fork'. (John Anderson)
  * Be a bit more lenient in parsing GitHub URLs (John Anderson)
  * Make 'fork' more verbose [#51] (John Anderson)
  * Tweak 'clone' to be a bit better (John Anderson)

1.28      2015-03-23 22:32:27-07:00 America/Los_Angeles (TRIAL RELEASE)

  * Tweak missing directory error detection regex (John Anderson)

1.27      2015-03-22 19:46:53-07:00 America/Los_Angeles (TRIAL RELEASE)

  * Add some safety code to prevent mux from opening errything (John Anderson)
  * Add '-e' flag to 'tmux' subcommand [#41] (John Anderson)

1.26      2015-03-18 22:04:39-07:00 America/Los_Angeles (TRIAL RELEASE)

  * Lock Moo to version 2 or greater (John Anderson)
  * Report Git version being used in test suite (John Anderson)

1.25      2015-03-17 20:51:55-07:00 America/Los_Angeles

  * Fix failing tests. (Thanks Travis CI!) (John Anderson)

1.24      2015-03-16 16:56:55-07:00 America/Los_Angeles

  * Update copyright to 2015 (John Anderson)
  * Lock Net::GitHub to at least v0.74 [#47] (John Anderson)
  * Various testing improvements (John Anderson)
  * Turn off IO::Page in 'got all' (John Anderson)
  * Get rid of Term::Readline in favor of IO::Prompt::Simple (John Anderson)
  * Move towards using Path::Tiny for errything (John Anderson)
  * Whitespace cleanup (John Anderson)
  * Clean up 'use' stanzas (John Anderson)